RonakT/13-02 - our services section changed

--- a/index.html
+++ b/index.html
@@ -208,40 +208,48 @@
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-cash-stack" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href=""></a></h4>
-              <p class="description">Dealing with hundreds of kgs of scrap daily</p>
+              <h4 class="title"><a href="">Focus on High quality</a></h4>
+              <p class="description">We have a reliable and consistent source of high-quality scrap and metal that
+                perfectly meets industry standards.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-calendar4-week" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Serving the industry from past 17 years, hence one of the most trusted and
-                experienced brands present in the industry</p>
+              <h4 class="title"><a href="">Customer Service</a></h4>
+              <p class="description">We place a strong emphasis on customer satisfaction by ensuring to provide prompt
+                and timely fulfillment of orders, which enhances the professional relationship of trust and loyalty with
+                our clients</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6" data-wow-delay="0.1s">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-chat-text" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Negotiable prices with complete paperwork and sticking to the bid even though
-                market fluctuates</p>
+              <h4 class="title"><a href="">Competitive Pricing</a></h4>
+              <p class="description">We offer cutting edge prices based on market demand and supply for both, our
+                consumers and suppliers. Out strategic pricing combined with our high quality, gives us a competitive
+                advantage</p>
             </div>
           </div>
 
           <div class="col-lg-6 col-md-6" data-wow-delay="0.2s">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-globe" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">Scaling us nationally by having good trades in states like <strong>Rajasthan</strong>, <strong>Punjab</strong></p>
+              <h4 class="title"><a href="">Convenient Location</a></h4>
+              <p class="description">Our trading business is located in a convenient and accessible location which
+                supports our transportation requirements. Our strategic location also makes it easier for stakeholders
+                to reach out to us whenever necessary</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-12" data-wow-delay="0.2s">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-clock" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">At your assistance eound the clock and helping clients anytime anywhere</p>
+              <h4 class="title"><a href="">Environmentally Friendly Practices</a></h4>
+              <p class="description">We ensure to implement environmentally friendly practices in our business
+                operations by reducing carbon footprint and contributing to sustainable waste management. This appeals
+                to customers who are committed to sustainability and want to work with firms that align with their
+                values</p>
             </div>
           </div>
         </div>
@@ -280,8 +288,8 @@
                 <h4>App 1</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/ms-scrap.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/ms-scrap.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -325,8 +333,8 @@
                 <h4>Card 2</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-1.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -340,8 +348,8 @@
                 <h4>Web 2</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-2.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -355,8 +363,8 @@
                 <h4>App 3</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-3.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="App 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -370,8 +378,8 @@
                 <h4>Card 1</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-4.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Card 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -385,8 +393,8 @@
                 <h4>Card 3</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-5.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Card 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -400,8 +408,8 @@
                 <h4>Web 3</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-6.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-6.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -414,8 +422,8 @@
                 <h4>Web 3</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -428,8 +436,8 @@
                 <h4>Web 3</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-8.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-8.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
