second commit - cleaning the code

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img src="assets/img/logo1.png" alt="Shreeji Traders" class="img-fluid"></a>
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo1.png" alt="Shreeji Traders" class="img-fluid"></a> -->
       <!-- Uncomment below if you prefer to use text as a logo -->
-      <!-- <h1 class="logo"><a href="index.html">Butterfly</a></h1> -->
+      <h1 class="logo"><a href="index.html">Shreeji Traders</a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto " href="#portfolio">Our Products</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -69,7 +69,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -201,7 +201,8 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>“Sustainability is not just a choice, it's a responsibility we have to our planet."</p>
+          <h4>“Sustainability is not just a choice, it's a responsibility we have to our planet."</h4>
+          <p>At Shreeji Traders, we believe that environment sustainability is the key. We ensure that our operations are as environmentally friendly as possible, reducing waste and emissions, and recycling materials whenever possible. This not only helps to protect the planet but also gives the company a competitive edge, as more and more customers are looking for environmentally responsible suppliers.</p>
         </div>
 
         <div class="row">
@@ -262,13 +263,11 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h2>Our Products</h2>
+          <p>One of the key strengths of our company is the ability to source a wide range of Ferrous and non-Ferrous metals scrap, Stainless steel scrap and scrapable engineering goods The company has established strong and loyal relationships with its suppliers and customers, enabling it to provide a constant supply of quality scrap materials. In addition, the company's expertise in the field means that it is able to offer competitive prices and flexible payment terms, ensuring that customers always get the best value for their money. </p>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -277,7 +276,7 @@
               <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
-        </div>
+        </div> -->
 
         <div class="row portfolio-container">
 
@@ -552,14 +551,12 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>We Will be available round the clock or you can also meet us personally</p>
         </div>
 
         <div>
           <iframe style="border:0; width: 100%; height: 270px;"
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.6638281610176!2d72.63559601535835!3d22.999386222964745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e8614d96b930b%3A0x341ff4b742187073!2sWonder%20Point%20Rd%2C%20Amraiwadi%2C%20Ahmedabad%2C%20Gujarat%20380026!5e0!3m2!1sen!2sin!4v1676316315607!5m2!1sen!2sin"
             frameborder="0" allowfullscreen></iframe>
         </div>
 
@@ -628,7 +625,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div class="footer-newsletter">
+    <!-- <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
@@ -640,21 +637,21 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer-top">
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class=" footer-contact">
             <h3>Shreeji Traders</h3>
             <p>
               11, Techno Ind Estate, Nr. Kailash park society <br>
               B/h Wonder point, C.T.M, Amraiwadi<br>
               Ahmedabad, Gujarat <br><br>
-              <strong>Phone:</strong> +91 9898 002 569<br>
-              <strong>Email:</strong> shreejitraders10779.com<br>
             </p>
+            <p><strong>Phone:</strong> +91 9898 002 569<br></p>
+            <p><strong>Email:</strong> shreejitraders10779.com<br></p>
           </div>
 
           <!-- <div class="col-lg-3 col-md-6 footer-links">
