RonakT/18/02 - code cleaning

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <!-- <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div> -->
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+          <img src="assets/img/recycled-1.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -101,12 +101,15 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
+        <div class="section-title">
+          <h2 class="text-center py-4">About Us</h2>
+        </div>
         <blockquote>
           Turning scrap into wealth, making a difference in the world, one trade at a time.
         </blockquote>
         <div class="row">
           <div class="col-xl-5 col-lg-6 d-flex justify-content-center video-box align-items-stretch position-relative">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>
+            <a href="assets/img/Home_video.mp4" class="glightbox play-btn mb-4"></a>
           </div>
 
           <div
@@ -202,7 +205,10 @@
         <div class="section-title">
           <h2>Services</h2>
           <h4>“Sustainability is not just a choice, it's a responsibility we have to our planet."</h4>
-          <p>At Shreeji Traders, we believe that environment sustainability is the key. We ensure that our operations are as environmentally friendly as possible, reducing waste and emissions, and recycling materials whenever possible. This not only helps to protect the planet but also gives the company a competitive edge, as more and more customers are looking for environmentally responsible suppliers.</p>
+          <p>At Shreeji Traders, we believe that environment sustainability is the key. We ensure that our operations
+            are as environmentally friendly as possible, reducing waste and emissions, and recycling materials whenever
+            possible. This not only helps to protect the planet but also gives the company a competitive edge, as more
+            and more customers are looking for environmentally responsible suppliers.</p>
         </div>
 
         <div class="row">
@@ -264,7 +270,12 @@
 
         <div class="section-title">
           <h2>Our Products</h2>
-          <p>One of the key strengths of our company is the ability to source a wide range of Ferrous and non-Ferrous metals scrap, Stainless steel scrap and scrapable engineering goods The company has established strong and loyal relationships with its suppliers and customers, enabling it to provide a constant supply of quality scrap materials. In addition, the company's expertise in the field means that it is able to offer competitive prices and flexible payment terms, ensuring that customers always get the best value for their money. </p>
+          <p>One of the key strengths of our company is the ability to source a wide range of Ferrous and non-Ferrous
+            metals scrap, Stainless steel scrap and scrapable engineering goods The company has established strong and
+            loyal relationships with its suppliers and customers, enabling it to provide a constant supply of quality
+            scrap materials. In addition, the company's expertise in the field means that it is able to offer
+            competitive prices and flexible payment terms, ensuring that customers always get the best value for their
+            money. </p>
         </div>
 
         <!-- <div class="row">
@@ -280,46 +291,14 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/scrap/ms-scrap.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/scrap/ms-scrap.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/stainless steel scrap.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Stainless-steel Scrap</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/stainless steel scrap.jpeg" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/scrap/turing-scrap.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/scrap/turing-scrap.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -329,12 +308,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>STEEL PIPEs & FITTINGS SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -344,12 +321,22 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-2.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>ALUMINIUM SHEETS</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/scrap/scrap-7.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>MS SCRAP</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Web 3"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -359,27 +346,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-3.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>STEEL SHEETS</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/scrap/scrap-4.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -389,12 +359,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-5.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
+                <h4>OTHER SCRAP</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -404,12 +373,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-6.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>HOUSEHOLD SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-6.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -418,12 +385,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-7.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>MS SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -432,12 +397,47 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-8.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>MS SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-8.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/scrap/scrap-4.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>MS SCRAP</h4>
+                <p>Card</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/scrap/scrap-4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Card 1"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/scrap/ms-scrap.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>MS-SCRAP</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/scrap/ms-scrap.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="App 1"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/scrap/turing-scrap.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>TURING SCRAP</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/scrap/turing-scrap.jpeg" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -556,7 +556,7 @@
 
         <div>
           <iframe style="border:0; width: 100%; height: 270px;"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.6638281610176!2d72.63559601535835!3d22.999386222964745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e8614d96b930b%3A0x341ff4b742187073!2sWonder%20Point%20Rd%2C%20Amraiwadi%2C%20Ahmedabad%2C%20Gujarat%20380026!5e0!3m2!1sen!2sin!4v1676316315607!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.680477186856!2d72.6408419!3d22.998774299999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e87475c0d84b5%3A0x37ef5232ce05fcf5!2sShreeji%20Traders!5e0!3m2!1sen!2sin!4v1676719085403!5m2!1sen!2sin"
             frameborder="0" allowfullscreen></iframe>
         </div>
 
@@ -644,8 +644,12 @@
         <div class="row">
 
           <div class=" footer-contact">
-            <h3>Shreeji Traders</h3>
+            <div class="col-md-3">
+              <h1>Shreeji Traders</h1>
+              <p>Traders of ferrous and non-ferrous metal, scraps and engineering goods</p>
+            </div>
             <p>
+              <strong>Address:</strong>
               11, Techno Ind Estate, Nr. Kailash park society <br>
               B/h Wonder point, C.T.M, Amraiwadi<br>
               Ahmedabad, Gujarat <br><br>
